# localite-development

./: .clinerules  .clinerules-code  .gitignore
localite-app/: .gitignore  app.json  package.json  tsconfig.json
localite-app/app/(tabs)/: UsersScreen.tsx  _layout.tsx
localite-app/declarations/: env.d.ts
localite-backend/: Cargo.toml  diesel.toml  localite.sqlite
localite-backend/migrations/2025-03-13-224233_create_users/: up.sql
localite-backend/src/: db.rs  main.rs  models.rs  repository.rs  schema.rs
localite-backend/src/routes/: mod.rs  transaction.rs  user.rs
