[package]
name = "localite-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
diesel = { version = "2.2.8", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"